added action area

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 
     </header>
     <body>
-
+        <div class="action-area">
+            <div>
+                <h1>See it in action</h1>
+                <p id="action-text">Explore the live preview and imagine your<br> brand in this bold new look.</p>
+                <button>Lunch live preview</button>
+            </div>
+            <div>
+                <img src="Assets/wc-mini.png"  alt="image"> 
+            </div>
+        </div>
     </body>
     <footer>
 
